2009-01-26  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpregionselecttool.c
	(gimp_region_select_tool_button_release): move variables to local
	scope.

2009-01-25  Martin Nordholts  <martinn@svn.gnome.org>

	* app/pdb/gimpprocedure.[ch] (gimp_procedure_create_override): New
	helper function that creates a new GimpProcedure that can be used
	to override an existing procedure.

2009-01-25  Martin Nordholts  <martinn@svn.gnome.org>

	* app/core/gimpimage.[ch] (gimp_image_get_type_string): New method
	to get a string representation of the image type.

	* app/display/gimpdisplayshell-title.c
	(gimp_display_shell_format_title): Ask the GimpImage for an image
	type string instead of making assumptions about its
	implementation.

2009-01-25  Martin Nordholts  <martinn@svn.gnome.org>

	* app/base/temp-buf.c (temp_buf_copy): Bail out if we fail to
	create a dest buffer.

2009-01-25  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/gimpparamspecs-duplicate.[ch]: new files implementing
	gimp_param_spec_duplicate() which is supposed to duplicate any
	gimp or gegl GParamSpec (but doesn't do this yet).

	* app/tools/gimpgegltool.c: remove the code form here.

2009-01-25  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpgegltool.c (gimp_param_spec_duplicate):
	gegl_color_get_rgba() takes pointers to doubles now, not floats.

2009-01-24  Michael Natterer  <mitch@gimp.org>

	Bug 568890 – don't rely on GtkAction implementation details

	* app/widgets/gimpuimanager.c (gimp_ui_manager_menu_item_select):
	use gtk_widget_get_action() instead of g_object_get_data(),
	which relies on the name of the data key.

2009-01-23  Kevin Cozens  <kcozens@cvs.gimp.org>

	* libgimpcolor/gimprgb-parse.c: Applied patch from Andreas Turtschan
	to fix more RGB colour values. Fixes bug #568909.

2009-01-23  Kevin Cozens  <kcozens@cvs.gimp.org>

	* libgimpcolor/gimprgb-parse.c: Applied patch from Andreas Turtschan