@@ -1,3 +1,8 @@
+2009-01-26  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/curve-bend.c (p_load_pointfile): check the
+	return value of fgets().
+
 2009-01-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpregionselecttool.c
